--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "license": "ISC",
   "devDependencies": {
     "http-server": "^0.11.1"
+  },
+  "dependencies": {
+    "firebase-tools": "^7.2.2"
   }
 }
