--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-server": "^0.11.1"
   },
   "dependencies": {
+    "@types/node": "^12.7.2",
     "firebase-tools": "^7.2.2",
     "web-push": "^3.3.5"
   }
