--- a/functions/package.json
+++ b/functions/package.json
@@ -20,7 +20,8 @@
     "firebase": "^6.3.4",
     "firebase-admin": "^8.3.0",
     "firebase-functions": "^3.1.0",
-    "firebase-tools": "^7.2.2"
+    "firebase-tools": "^7.2.2",
+    "web-push": "^3.3.5"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
