--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@types/node": "^12.7.2",
+    "@types/web-push": "^3.3.0",
     "firebase-tools": "^7.2.2",
     "web-push": "^3.3.5"
   }
