--- a/functions/package.json
+++ b/functions/package.json
@@ -16,11 +16,14 @@
   "dependencies": {
     "@firebase/app": "^0.4.13",
     "@firebase/app-types": "^0.4.3",
+    "@google-cloud/storage": "^1.7.0",
+    "busboy": "^0.3.1",
     "cors": "^2.8.5",
     "firebase": "^6.3.4",
     "firebase-admin": "^8.3.0",
     "firebase-functions": "^3.1.0",
     "firebase-tools": "^7.2.2",
+    "uuid-v4": "^0.1.0",
     "web-push": "^3.3.5"
   },
   "devDependencies": {
